# 3DModelViewer

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
sample_model/: fury.fbx
shaders/: model.frag  model.vert
src/: main.cpp
src/camera/: camera.cpp  camera.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp
src/imgui/: im_gui_context.cpp  im_gui_context.hpp
src/model/: mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/opengl/: framebuffer.cpp  framebuffer.hpp  includes.hpp  index_buffer.hpp  index_buffer_static.cpp  index_buffer_static.hpp  shader.cpp  shader.hpp  texture2D.cpp  texture2D.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp  vertex_buffer_static.cpp  vertex_buffer_static.hpp
src/utils/: utils.cpp  utils.hpp
src/window/: viewport.cpp  viewport.hpp  window.cpp  window.hpp  window_base.cpp  window_base.hpp
